# cartographer_navigation_mirs2303

./: CMakeLists.txt  package.xml
arduino/2d_nav_moter/: 2d_nav_moter.ino
arduino/odom_publisher/: odom_publisher.ino
arduino/odom_test/: odom_test.ino
arduino/std_serial/: receive.ino  send.ino  std_serial.ino
configuration_files/: outdoor_2d_with_odom.lua
launch/: cartographer.launch  cartographer_navigation.launch  navigation.launch  rplidar_mirs2303.launch
maps/: lab_ev.pgm  lab_ev.yaml  map.pgm  map.yaml
param/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
rviz/: navigation.rviz
src/: odometry_publisher.cpp  ros_socket.py  scan_repair.cpp  scan_repair.py  socket_reciver.py  socket_sender.py
urdf/: backpack_2d.urdf  robot_model.urdf
